# bookish-octo

./: CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  TODO.md
adr/: ADR-001-service-topology-pilot.md  ADR-002-distributed-transaction-standard.md  ADR-003-storage-profile-and-migration-contract.md  ADR-004-dual-book-policy-versioning.md  ADR-005-erp-adapter-contract-rollout-gating.md  ADR-006-payment-gateway-contract-stripe-first.md  ADR-007-scale-slo-no-bend-gates.md  README.md
contracts/: README.md  canonical_event_v1.schema.json  exception_taxonomy_v0.json  reconciliation_model_v0.json
controls/: ACCESS_MODEL_V0.md  ACCESS_REVIEW_REPORTING_V1.md  CONTROL_GATES_REGISTER_V1.md  INCIDENT_RESPONSE_DRILL_REPORT_V1.md  PCI_SCOPE_CONTROL_OWNERSHIP_MATRIX_V1.md  RELEASE_CONTROL_CHECKLIST_V1.md  TAMPER_SEALING_VERIFICATION_V1.md
crates/connector-sdk/: Cargo.toml
crates/connector-sdk/src/: inntopia.rs  lib.rs  square.rs  stripe.rs
crates/posting-api/: Cargo.toml
crates/posting-api/src/: lib.rs  main.rs  period.rs  rule_engine.rs
finance/: COA_DIMENSIONS_V1.md  DUAL_BOOK_POLICY_PACKAGE_V1.md  POSTING_RULE_TEMPLATE_PACK_V1.md  US_CA_FINANCE_EVIDENCE_CHECKLIST_V1.md
governance/: GREAT_REFACTOR_DECISIONS_ACTIONS_REPORT.md  SPRINT1_PLAN_COMPLETION_REPORT.md  SPRINT2_LOC_BY_AGENT.md  SPRINT2_PLAN_COMPLETION_REPORT.md  SPRINT3_PLAN_COMPLETION_REPORT.md  SPRINT4_6_AGENT_REVIEW.md  SPRINT4_PLAN_COMPLETION_REPORT.md  SPRINT5_PLAN_COMPLETION_REPORT.md  SPRINT6_PLAN_COMPLETION_REPORT.md  SPRINT7_PLAN_COMPLETION_REPORT.md  architect_updates.md  impact_decisions.json  (+7 more)
(+47 files in other folders)
