[workspace]
members = [
  "crates/platform-core",
  "crates/ledger-posting",
  "crates/connector-sdk",
  "crates/reconciliation-model",
  "crates/posting-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
